fix: suppress uncompiled plugin warnings, replace deprecated APIs
- Change plugin class-not-found log level from WARNING to FINE in
  MindMapHookFactory (database/jabber plugins are on roadmap)
- Replace deprecated Class.newInstance() with
  getDeclaredConstructor().newInstance() in ModesCreator and
  MindMapHookFactory
- Replace deprecated Dialog.show() override in FilterComposerDialog
  with setVisible(boolean), update FilterToolbar caller